--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
             </div>
             <nav class="nav">
                 <ul>
-                <li >
+                    <li>
                     <a class="page-courante" href="#hebergement">Hébergement</a>
-                </li>
-                <li>
-                    <a href="#activite">Activités</a></li>
-                <li >
+                    </li>
+                    <li>
+                    <a href="#activite">Activités</a>
+                    </li>
+                    <li>
                     <a class="connexion" href="#inscription">S'inscrire</a>
-                </li>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -33,8 +34,8 @@
     
     <main>
         <form action="">
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <p>En plein centre ville ou en pleine nature</p>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
         <div class="recherche">
             <i class="fas fa-map-marker-alt"></i>
             <input class="search" name="" placeholder="Marseille,France">
@@ -44,21 +45,23 @@
  <div class="content">
             <div class="filtre">
                 <h2>filtres<h2>
-                    <div class="box">
-                    <i class="fas fa-money-bill-wave"></i>
-                    <input type="text" class="search-filtre" placeholder="Economie" aria-label="search">
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-child"></i>
-                    <input type="text" class="search-filtre" placeholder="Familial" aria-label="search">
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-heart"></i>
-                    <input type="text" class="search-filtre" placeholder="Romantique" aria-label="search">
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-dog"></i>
-                    <input type="text" class="search-filtre" placeholder="Animaux autorisés" aria-label="search">
+                    <div class="box-filtre">
+                        <div class="box">
+                            <i class="fas fa-money-bill-wave"></i>
+                            <input type="text" class="search-filtre" placeholder="Economie" aria-label="search"> 
+                        </div>
+                        <div class="box">
+                            <i class="fas fa-child"></i>
+                            <input type="text" class="search-filtre" placeholder="Familial" aria-label="search">
+                        </div>
+                        <div class="box">
+                            <i class="fas fa-heart"></i>
+                            <input type="text" class="search-filtre" placeholder="Romantique" aria-label="search">
+                        </div>
+                        <div class="box">
+                            <i class="fas fa-dog"></i>
+                            <input type="text" class="search-filtre" placeholder="Animaux autorisés" aria-label="search">
+                        </div>
                     </div>
             </div>
         </div>
@@ -70,7 +73,7 @@
                 <div class="hebergement">
                 <img src="" alt="">
                 </div>
-                <h3>Auberge la Cannebière</h3>
+                <h2>Auberge la Cannebière</h2>
             </div>    
         </div>
         <div class="section">
