--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
  <div class="content">
             <div class="filtre">
-                <h2>filtres<h2>
+                <h2>filtres</h2>
                     <div class="box-filtre">
                         <div class="box">
                             <i class="fas fa-money-bill-wave"></i>
