couleur des étoiles

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                 <div class="bloc-image">
                     <div class="card-img">
                         <div class="card">
-                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                        <img src="images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
                             <div class="card-text">
                                 <h3>Auberge la Cannebière</h3>
                                 <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                                     <div class="stars">
-                                        <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                        <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                        <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                        <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                        <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                        <div class="fas fa-star Icon-star"></div>
+                                        <div class="fas fa-star Icon-star"></div>
+                                        <div class="fas fa-star Icon-star"></div>
+                                        <div class="fas fa-star Icon-star"></div>
+                                        <div class="fas fa-star Icon-starColor"></div>
                                     </div> 
                             </div>
                         </div>
@@ -98,11 +98,11 @@
                             <h3>Hôtel du port</h3>
                             <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                             <div class="stars">
-                                <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                <div class="fas fa-star Icon-star"></div>
+                                <div class="fas fa-star Icon-star"></div>
+                                <div class="fas fa-star Icon-star"></div>
+                                <div class="fas fa-star Icon-star"></div>
+                                <div class="fas fa-star Icon-star"></div>
                             </div>
                         </div>
                         </div>
@@ -114,27 +114,27 @@
                                     <h3>Hôtel les mouettes</h3>
                                     <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                                         <div class="stars">
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-starColor"></div>
                                         </div>
                                 </div>
                         </div>
                     </div>
                     <div class="card-img">
                         <div class="card">
-                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                           <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
                                 <div class="card-text">
                                     <h3>Hôtel de la mer</h3>
                                     <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                                         <div class="stars">
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-starColor"></div>
+                                            <div class="fas fa-star Icon-starColor"></div>
                                         </div>
                                 </div>
                         </div>
@@ -146,11 +146,11 @@
                                 <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                                     <div class="card-text">
                                     <div class="stars">
-                                    <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                    <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                    <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                    <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                    <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                    <div class="fas fa-star Icon-star"></div>
+                                    <div class="fas fa-star Icon-star"></div>
+                                    <div class="fas fa-star Icon-star"></div>
+                                    <div class="fas fa-star Icon-star"></div>
+                                    <div class="fas fa-star Icon-starColor"></div>
                                     </div>
                                     </div>
                     </div>
@@ -162,11 +162,11 @@
                                     <h3>Hôtel chez Anima</h3>
                                     <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
                                         <div class="stars">
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIcon"></div>
-                                            <div class="fas fa-star hostingMainCardGradeIconEmpty"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-star"></div>
+                                            <div class="fas fa-star Icon-starEmpty"></div>
                                         </div>
                                 </div>
                         </div>
@@ -182,7 +182,6 @@
                             <h3>Hôtel Le soleil du matin</h3>
                 
                     </div>
-                
                         <div class="item2">
                         <h2>Activités à Marseille</h2>
                         <img src="#" alt="sz">
