--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav class="nav">
                 <ul>
                     <li>
-                    <a class="page-courante" href="#hebergement">Hébergement</a>
+                    <a class="page-courante" href="#container">Hébergement</a>
                     </li>
                     <li>
-                    <a href="#activite">Activités</a>
+                    <a href="#item2">Activités</a>
                     </li>
                     <li>
                     <a class="connexion" href="#inscription">S'inscrire</a>
@@ -71,7 +71,7 @@
          <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
         </form>
-            <div class="container">
+            <div id="container">
                 <div class="item">
                     <h2>Hébergements à Marseille</h2>
                     <div class="bloc-image">
@@ -219,7 +219,7 @@
                             </div>
                                 <div class="card-text-item1">
                                     <h3>Hôtel Le soleil du matin</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">128€</span></p>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">128<em>€</em></span></p>
                                     <div class="stars">
                                         <div class="fas fa-star Icon-star"></div>
                                         <div class="fas fa-star Icon-star"></div>
@@ -231,7 +231,7 @@
                         </div>       
                     </div>
             </div>
-                        <div class="item2">
+                        <div id="item2">
                             <h2>Activités à Marseille</h2>
                             <div class="container-item">
                                 <div class="bloc-image-item">
