rectification des prix

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <img src="images/hebergements/retouche/marcus1.jpg" alt="">
                             <div class="card-text">
                                 <h3>Auberge la Cannebière</h3>
-                                <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
+                                <p class="hotel-price">Nuit à partir de <span class="price">25<strong>€</strong></span></p>
                                     <div class="stars">
                                         <div class="fas fa-star Icon-star"></div>
                                         <div class="fas fa-star Icon-star"></div>
@@ -96,7 +96,7 @@
                         <img src="images/hebergements/retouche/fred2.jpg" alt="">
                         <div class="card-text">
                             <h3>Hôtel du port</h3>
-                            <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
+                            <p class="hotel-price">Nuit à partir de <span class="price">25<strong>€</strong></span></p>
                             <div class="stars">
                                 <div class="fas fa-star Icon-star"></div>
                                 <div class="fas fa-star Icon-star"></div>
@@ -112,7 +112,7 @@
                             <img src="images/hebergements/retouche/reisetopia3.jpg" alt="">
                                 <div class="card-text">
                                     <h3>Hôtel les mouettes</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">25<strong>€</strong></span></p>
                                         <div class="stars">
                                             <div class="fas fa-star Icon-star"></div>
                                             <div class="fas fa-star Icon-star"></div>
@@ -128,7 +128,7 @@
                            <img src="/images/hebergements/retouche/annie-spratt4.jpg" alt="">
                                 <div class="card-text">
                                     <h3>Hôtel de la mer</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">46<strong>€</strong></span></p>
                                         <div class="stars">
                                             <div class="fas fa-star Icon-star"></div>
                                             <div class="fas fa-star Icon-star"></div>
@@ -142,9 +142,10 @@
                     <div class="card-img">
                     <div class="card">
                         <img src="images/hebergements/retouche/nicate-lee5.jpg" alt="">
+                        <div class="card-text">
                             <h3>Auberge Le Panier</h3>
-                                <p class="hotel-price">Nuit à partir de <span class="price">25€</span></p>
-                                    <div class="card-text">
+                                <p class="hotel-price">Nuit à partir de <span class="price">23<strong>€</strong></span></p>
+                                    
                                     <div class="stars">
                                     <div class="fas fa-star Icon-star"></div>
                                     <div class="fas fa-star Icon-star"></div>
@@ -172,10 +173,7 @@
                         </div>        
                     </div>                              
                 </div> 
-                <div class="text">
-                    <P>Afficher plus...</P> 
-                   </div>          
-                </div>        
+                   </div>        
                     <div class="item1">
                         <div class="item1-icone">
                             <h2>Les plus populaires</h2>
@@ -187,7 +185,7 @@
                             </div>
                                 <div class="card-text-item1">
                                     <h3>Hôtel Le soleil du matin</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">128€</span></p>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">128<strong>€</strong></span></p>
                                     <div class="stars">
                                         <div class="fas fa-star Icon-star"></div>
                                         <div class="fas fa-star Icon-star"></div>
@@ -199,11 +197,11 @@
                         </div>  
                         <div class="card-item1">
                             <div class="item1-img">
-                                <img src="images/hebergements/retouche/emile-guillemot7.jpg" class="pop" alt="">
+                                <img src="images/hebergements/retouche/aw-creative9.jpg"  class="pop" alt="">
                             </div>
                                 <div class="card-text-item1">
-                                    <h3>Hôtel Le soleil du matin</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">128€</span></p>
+                                    <h3>Au coeur de l'eau <br> Chambres d'hôtes</h3>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">71<strong>€</strong></span></p>
                                     <div class="stars">
                                         <div class="fas fa-star Icon-star"></div>
                                         <div class="fas fa-star Icon-star"></div>
@@ -215,11 +213,11 @@
                         </div> 
                         <div class="card-item1">
                             <div class="item1-img">
-                                <img src="images/hebergements/retouche/emile-guillemot7.jpg" class="pop" alt="">
+                                <img src="images/hebergements/retouche/febrian8.jpg" class="pop" alt="">
                             </div>
                                 <div class="card-text-item1">
-                                    <h3>Hôtel Le soleil du matin</h3>
-                                    <p class="hotel-price">Nuit à partir de <span class="price">128<em>€</em></span></p>
+                                    <h3>Hôtel Tout bleu et Blanc</h3>
+                                    <p class="hotel-price">Nuit à partir de <span class="price">68<strong>€</strong></span></p>
                                     <div class="stars">
                                         <div class="fas fa-star Icon-star"></div>
                                         <div class="fas fa-star Icon-star"></div>
@@ -229,8 +227,9 @@
                                     </div>
                                 </div>
                         </div>       
-                    </div>
-            </div>
+                    </div>       
+                  <strong><p>Afficher plus...</p></strong>
+                </div>
                         <div id="item2">
                             <h2>Activités à Marseille</h2>
                             <div class="container-item">
