--- a/index.html
+++ b/index.html
@@ -207,26 +207,26 @@
                     </div>
                 </div>
             </aside>
-        </section>                   
-        <section class="album">
+        </section>             
+        <div class="album">
         <h2>Activités à Marseille</h2>
         <div id="activite">
-            <div class="item-marseille">
-                <div class="card-image">    
+            <div class="item_marseille">
+                <div class="card_marseille">    
                     <a href="#">
-                        <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" class="img1">
+                        <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1" alt="" >
                     </a>
-                    <p>Vieux Port</p> 
+                    <h4>Vieux Port</h4> 
                 </div>
             </div>
-            <div class="item-marseille">
-            <div class="card-image">    
+            <div class="item_marseille">
+            <div class="card_marseille">    
                     <a href="#">
-                        <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" class="img2">
+                       <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="img2" alt="">
                     </a>
                     <p>Fort de Pomègues</p>    
             </div>
-            <div class="card-image">    
+            <div class="card_marseille">    
                     <a href="#">
                         <img src="/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""
                         class="img3">
@@ -234,29 +234,29 @@
                     <p>Île de Frioul</p>   
             </div>
             </div>
-            <div class="item-marseille">
-                <div class="card-image">    
+            <div class="item_marseille">
+                <div class="card_marseille">    
                     <a href="#img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                         <img src="/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="img1">
                     </a>
                     <p>Parc National des Calanques</p> 
                 </div>
              </div>   
-            <div class="item-marseille">
-                <div class="card-image">    
+            <div class="item_marseille">
+                <div class="card_marseille">    
                     <a href="#">
                         <img src="/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="img4">
                     </a>        
                     <p>Notre-Dame-de-la-Garde</p> 
                 </div>
-                <div class="card-image">    
+                <div class="card_marseille">    
                     <a href="#">
                     <img src="/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" class="img5">
                     </a>
                     <p>Parc Longchamp</p>
                 </div>   
              </div>   
-    </section>   
+    
            
     </main>             
     <footer>
