css activite Marseille

--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
                 </div>
             </div>
             <div class="colonne_marseille">
-                <div class="card">    
+                <div class="card1">    
                     <a href="#">
                     <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="img2" alt="photo Pomègues">
                     </a>
                     <h3>Fort de Pomègues</h3>    
                 </div>
-                <div class="card">  
+                <div class="card1">  
                     <a href="#">
                     <img src="/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="img3" alt="photo Frioul">
                     </a>
@@ -238,13 +238,13 @@
                 </div>
              </div>   
             <div class="colonne_marseille">
-                <div class="card">    
+                <div class="card2">    
                     <a href="#">
                     <img src="/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img4" alt="photo Notre-Dame-de-la-Garde">
                     </a>        
                     <h3>Notre-Dame-de-la-Garde</h3> 
                 </div>
-                <div class="card">    
+                <div class="card2">    
                     <a href="#">
                     <img src="/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="img5" alt="photo Parc Longchamp" >
                     </a>
