--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="En">
+<html lang="Fr">
 
 <head>
     <meta charset="UTF-8">
@@ -15,12 +15,12 @@
 
 <body>
     <header>
+        <img src="/images/images/logo/Reservia.svg" alt="Logo Reservia" class="logo">
         <nav> 
-            <img src="/images/images/logo/Reservia.svg" alt="Logo Reservia" class="logo">
             <ul>
-                    <li><a class="nav_item hebergement" href="#hebergement" >Hébergements</a></li>
-                    <li><a class="nav_item activite" href="#activite" >Activités</a></li>
-                    <li><a class="nav_item inscription" herf="#" >S'inscrire</a></li>
+                <li><a class="nav_item hebergement" href="#hebergement" >Hébergements</a></li>
+                <li><a class="nav_item activite" href="#activite" >Activités</a></li>
+                <li><a class="nav_item inscription" herf="#" >S'inscrire</a></li>
             </ul>
         </nav>    
     </header>                                        
@@ -40,23 +40,25 @@
             </div>
         </form>
         <div class="filtre">
-            <h2>Filtres</h2>
-            <div class="box">
-                <i class="fas fa-money-bill-wave icone"></i>
-                <p>Économie</p>
-            </div>
-            <div class="box">
-                <i class="fas fa-child icone"></i>
-                <p> Familial</p>
-            </div>
+                <h2>Filtres</h2>
+            <div class="box_filtre">
                 <div class="box">
-                <i class="fas fa-heart icone"></i>
-                <p>Romantique</p>
-            </div>
-            <div class="box">
-                <i class="fas fa-dog icone"></i>
-                <p>Animaux autorisés</p>
-            </div>
+                    <i class="fas fa-money-bill-wave icone"></i>
+                    <p>Économie</p>
+                </div>
+                <div class="box">
+                    <i class="fas fa-child icone"></i>
+                    <p> Familial</p>
+                </div>
+                <div class="box">
+                    <i class="fas fa-heart icone"></i>
+                    <p>Romantique</p>
+                </div>
+                <div class="box">
+                    <i class="fas fa-dog icone"></i>
+                    <p>Animaux autorisés</p>
+                </div>
+                </div>
         </div>
         <div class="info">
         <i class="fas fa-info icone"></i>
@@ -68,8 +70,8 @@
                 <h2>Hébergements à Marseille</h2>
             <div id="hebergement">
                 <div class="card-image">    
-                    <a href="#"> <img
-                        src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hebergements">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
                     </a>
                     <div class="card-text">
                         <h3>Auberge la Cannebière</h3>
@@ -82,9 +84,8 @@
                     </div>     
                 </div>
                 <div class="card-image">    
-                    <a href="#img/fred-kleber-gTbaxaVLvsg-unsplash.jpg"><img
-                        src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                        alt=""></a>
+                    <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                    </a>
                     <div class="card-text">
                         <h3>Hôtel du port</h3>
                         <p> Nuit à partir de 52<strong>€</strong></p>
@@ -96,9 +97,9 @@
                     </div>     
                 </div>
                 <div class="card-image">    
-                    <a href="#img/reisetopia-B8WIgxA_PFU-unsplash.jpg"><img
-                        src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                        alt=""></a>
+                    <a href="#">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                    </a>
                     <div class="card-text">
                         <h3>Hôtel les mouettes</h3>
                         <p> Nuit à partir de 76<strong>€</strong></p>
@@ -110,9 +111,9 @@
                     </div>     
                 </div>
                 <div class="card-image">    
-                    <a href="#img/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img
-                        src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                        alt=""></a>
+                    <a href="#">
+                    <img src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                    </a>
                     <div class="card-text">
                         <h3>Hôtel de la mer</h3>
                         <p> Nuit à partir de 46<strong>€</strong></p>
@@ -124,8 +125,8 @@
                     </div>     
                 </div>
                 <div class="card-image">    
-                    <a href="#img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                    <a href="#">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                     </a>
                     <div class="card-text">
                         <h3>Auberge Le Panier</h3>
@@ -138,9 +139,8 @@
                     </div>     
                 </div>
                 <div class="card-image">    
-                    <a href="#img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                        alt="">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Anima">
                     </a>
                     <div class="card-text">
                         <h3>Hôtel chez Anima</h3>
@@ -156,11 +156,12 @@
                 <h3>Afficher plus</h3>
             </article>
             <aside>
-                <h2>Les plus populaires</h2>
+                <h2>Les plus populaires
                     <i class="fas fa-chart-line"></i>
+                </h2>
                 <div id="populaire">
                     <div class="card-image">    
-                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
                         </a>
                         <div class="card-text">
                                 <h3>Hôtel Le soleil du matin</h3>
@@ -174,7 +175,7 @@
                     </div>
                     <div class="card-image">    
                             <a href="#img/aw-creative-VGs8z60yT2c-unsplash.jpg">
-                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau chambres d'hôtes">
                             </a>
                             <div class="card-text">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -188,7 +189,7 @@
                     </div>
                      <div class="card-image">    
                             <a href="#img/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
-                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleuet blanc">
                             </a>
                             <div class="card-text">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
@@ -205,12 +206,12 @@
             </aside>
         </section>             
         <div class="album">
-        <h2>Activités à Marseille</h2>
-        <div id="activite">
+            <h2>Activités à Marseille</h2>
+            <div id="activite">
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#">
-                    <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1" alt="photo Vieux port" >
+                    <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1"  alt="photo Vieux port">
                     </a>
                     <h3>Vieux Port</h3> 
                 </div>
@@ -250,26 +251,27 @@
                     </a>
                     <h3>Parc Longchamp</h3>
                 </div>   
-             </div>          
+             </div> 
+            </div>  
+        </div>       
     </main>  
 
     <footer>
-        <div class="info-footer">
-            <div class="card-footer">
-                <h4>A propos</h4>
-                <ul>
-                    <li><a href="#">Fonctionnement du site</a></li>
-                    <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#">Données et Confidentialité</a></li>             
-                </ul>        
-            </div>
-            <div class="card-footer">
-                <h4>Nos hébergements</h4>
-                <ul>
-                    <li><a href="#">Charte qualité</a></li>
-                    <li><a href="#">Soumettre votre hôtel</a></li>
-                </ul>
-            </div>
+        <div class="card-footer">  
+            <h4>A propos</h4>    
+            <ul>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales de vente</a></li>
+                <li><a href="#">Données et Confidentialité</a></li>             
+            </ul>        
+        </div>
+        <div class="card-footer">
+            <h4>Nos hébergements</h4>
+            <ul>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Soumettre votre hôtel</a></li>
+            </ul>
+        </div>
             <div class="card-footer">
                 <h4>Assistance</h4>
                 <ul>
@@ -277,7 +279,6 @@
                     <li><a href="#">Nous contacter</a></li>
                 </ul>
             </div>
-        </div>
     </footer>
 </body>
 </html>
