--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <img src="/images/images/logo/Reservia.svg" alt="Logo Reservia" class="logo">
         <nav> 
             <ul>
-                <li><a class="nav_item hebergement" href="#hebergement" >Hébergements</a></li>
-                <li><a class="nav_item activite" href="#activite" >Activités</a></li>
-                <li><a class="nav_item inscription" herf="#" >S'inscrire</a></li>
+                <li><a class="nav_item hebergement" href="#hebergement">Hébergements</a></li>
+                <li><a class="nav_item activite" href="#activite">Activités</a></li>
+                <li><a class="nav_item inscription" herf="#inscription" >S'inscrire</a></li>
             </ul>
         </nav>    
     </header>                                        
-  <main>
+    <main>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre ville ou en pleine nature</p>
         <form>
@@ -58,7 +58,7 @@
                     <i class="fas fa-dog icone"></i>
                     <p>Animaux autorisés</p>
                 </div>
-                </div>
+            </div>
         </div>
         <div class="info">
         <i class="fas fa-info icone"></i>
@@ -201,8 +201,8 @@
                                     <div class="fas fa-star Icon-starColor"></div>
                             </div>     
                     </div>
-                    </div>
                 </div>
+            
             </aside>
         </section>             
         <div class="album">
