--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="/images/images/logo/Reservia.svg" alt="Logo Reservia" class="logo">
+        <img src="/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
         <nav> 
             <ul>
                 <li><a class="nav_item hebergement" href="#hebergement">Hébergements</a></li>
