--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
+        <img src="/images/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
         <nav> 
             <ul>
                 <li><a class="nav_item hebergement" href="#hebergement">Hébergements</a></li>
@@ -211,7 +211,7 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#">
-                    <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1"  alt="photo Vieux port">
+                    <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"class="img1"  alt="photo Vieux port">
                     </a>
                     <h3>Vieux Port</h3> 
                 </div>
@@ -219,7 +219,7 @@
             <div class="colonne_marseille">
                 <div class="card1">    
                     <a href="#">
-                    <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="img2" alt="photo Pomègues">
+                    <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img2" alt="photo Pomegues">
                     </a>
                     <h3>Fort de Pomègues</h3>    
                 </div>
