finaliser le responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="/images/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
+        <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
         <nav> 
             <ul>
                 <li><a class="nav_item hebergement" href="#hebergement">Hébergements</a></li>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="card-image">    
                     <a href="#">
-                    <img src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                     </a>
                     <div class="card-text">
                         <h3>Hôtel de la mer</h3>
@@ -211,7 +211,7 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#">
-                    <img src="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"class="img1"  alt="photo Vieux port">
+                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"class="img1"  alt="photo Vieux port">
                     </a>
                     <h3>Vieux Port</h3> 
                 </div>
@@ -219,13 +219,13 @@
             <div class="colonne_marseille">
                 <div class="card1">    
                     <a href="#">
-                    <img src="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img2" alt="photo Pomegues">
+                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img2" alt="photo Pomegues">
                     </a>
                     <h3>Fort de Pomègues</h3>    
                 </div>
                 <div class="card1">  
                     <a href="#">
-                    <img src="/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="img3" alt="photo Frioul">
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="img3" alt="photo Frioul">
                     </a>
                     <h3>Île de Frioul</h3>   
                 </div>
@@ -233,7 +233,7 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                    <img src="/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img1"  alt="photo Calanques">
+                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img1"  alt="photo Calanques">
                     </a>
                     <h3>Parc National des Calanques</h3> 
                 </div>
@@ -241,13 +241,13 @@
             <div class="colonne_marseille">
                 <div class="card2">    
                     <a href="#">
-                    <img src="/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img4" alt="photo Notre-Dame-de-la-Garde">
+                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img4" alt="photo Notre-Dame-de-la-Garde">
                     </a>        
                     <h3>Notre-Dame-de-la-Garde</h3> 
                 </div>
                 <div class="card2">    
                     <a href="#">
-                    <img src="/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="img5" alt="photo Parc Longchamp" >
+                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="img5" alt="photo Parc Longchamp" >
                     </a>
                     <h3>Parc Longchamp</h3>
                 </div>   
