changement suite au W3C

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
         <nav> 
             <ul>
-                <li><a class="nav_item hebergement" href="#hebergement">Hébergements</a></li>
-                <li><a class="nav_item activite" href="#activite">Activités</a></li>
-                <li><a class="nav_item inscription" herf="#inscription" >S'inscrire</a></li>
+                <li><a href="#hebergement" class="nav_item hebergement">Hébergements</a></li>
+                <li><a href="#activite" class="nav_item activite">Activités</a></li>
+                <li><a herf="#" class="nav_item inscription" >S'inscrire</a></li>
             </ul>
         </nav>    
     </header>                                        
@@ -211,7 +211,7 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#">
-                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"class="img1"  alt="photo Vieux port">
+                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1"  alt="photo Vieux port">
                     </a>
                     <h3>Vieux Port</h3> 
                 </div>
