--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                 </h2>
                 <div id="populaire">
                     <div class="card-image">    
-                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
+                                 alt="Hôtel le soleil du matin">
                         </a>
                         <div class="card-text">
                                 <h3>Hôtel Le soleil du matin</h3>
@@ -175,7 +177,8 @@
                     </div>
                     <div class="card-image">    
                             <a href="#img/aw-creative-VGs8z60yT2c-unsplash.jpg">
-                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau chambres d'hôtes">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" 
+                                     alt="Au coeur de l'eau chambres d'hôtes">
                             </a>
                             <div class="card-text">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -189,7 +192,8 @@
                     </div>
                      <div class="card-image">    
                             <a href="#img/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
-                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleuet blanc">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" 
+                                     alt="Hôtel tout bleuet blanc">
                             </a>
                             <div class="card-text">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
@@ -202,7 +206,6 @@
                             </div>     
                     </div>
                 </div>
-            
             </aside>
         </section>             
         <div class="album">
@@ -211,7 +214,8 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#">
-                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1"  alt="photo Vieux port">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img1"  
+                             alt="photo Vieux port">
                     </a>
                     <h3>Vieux Port</h3> 
                 </div>
@@ -219,13 +223,15 @@
             <div class="colonne_marseille">
                 <div class="card1">    
                     <a href="#">
-                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img2" alt="photo Pomegues">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img2" 
+                             alt="photo Pomegues">
                     </a>
                     <h3>Fort de Pomègues</h3>    
                 </div>
                 <div class="card1">  
                     <a href="#">
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="img3" alt="photo Frioul">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="img3" 
+                             alt="photo Frioul">
                     </a>
                     <h3>Île de Frioul</h3>   
                 </div>
@@ -233,7 +239,8 @@
             <div class="colonne_marseille">
                 <div class="card">    
                     <a href="#img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img1"  alt="photo Calanques">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img1"  
+                         alt="photo Calanques">
                     </a>
                     <h3>Parc National des Calanques</h3> 
                 </div>
@@ -241,13 +248,15 @@
             <div class="colonne_marseille">
                 <div class="card2">    
                     <a href="#">
-                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img4" alt="photo Notre-Dame-de-la-Garde">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img4" 
+                             alt="photo Notre-Dame-de-la-Garde">
                     </a>        
                     <h3>Notre-Dame-de-la-Garde</h3> 
                 </div>
                 <div class="card2">    
                     <a href="#">
-                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="img5" alt="photo Parc Longchamp" >
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="img5"
+                             alt="photo Parc Longchamp" >
                     </a>
                     <h3>Parc Longchamp</h3>
                 </div>   
