correction de la navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#hebergement" class="nav_item hebergement">Hébergements</a></li>
                 <li><a href="#activite" class="nav_item activite">Activités</a></li>
-                <li><a herf="#" class="nav_item inscription" >S'inscrire</a></li>
+                <li><a href="#" class="nav_item inscription">S'inscrire</a></li>
             </ul>
         </nav>    
     </header>                                        
@@ -66,7 +66,7 @@
         </div>  
         
         <section>
-            <article>
+        <div class="article">
                 <h2>Hébergements à Marseille</h2>
             <div id="hebergement">
                 <div class="card-image">    
@@ -154,7 +154,7 @@
                 </div>
             </div>   
                 <h3>Afficher plus</h3>
-            </article>
+           </div>
             <aside>
                 <h2>Les plus populaires
                     <i class="fas fa-chart-line"></i>
