--- a/index.html
+++ b/index.html
@@ -40,26 +40,42 @@
             </div>
         </form>
         <div class="filtre">
-                <h2>Filtres</h2>
-            <div class="box_filtre">
-                <div class="box">
-                    <i class="fas fa-money-bill-wave icone"></i>
-                    <p>Économie</p>
+            <h2>Filtres</h2>
+            <div class="container">
+              <div class="box-filtre">
+                <div class="filtre_icone">
+                  <i class="fas fa-money-bill-wave icone"></i>
                 </div>
-                <div class="box">
-                    <i class="fas fa-child icone"></i>
-                    <p> Familial</p>
+                <div class="text">
+                  <p>Économique</p>
                 </div>
-                <div class="box">
-                    <i class="fas fa-heart icone"></i>
-                    <p>Romantique</p>
+              </div>
+              <div class="box-filtre">
+                <div class="filtre_icone">
+                  <i class="fas fa-child icone"></i>
                 </div>
-                <div class="box">
-                    <i class="fas fa-dog icone"></i>
-                    <p>Animaux autorisés</p>
+                <div class="text">
+                  <p>Familial</p>
                 </div>
+              </div>
+              <div class="box-filtre">
+                <div class="filtre_icone">
+                  <i class="fas fa-heart icone"></i>
+                </div>
+                <div class="text">
+                  <p>Romantique</p>
+                </div>
+              </div>
+              <div class="box-filtre">
+                <div class="filtre_icone">
+                  <i class="fas fa-dog icone"></i>
+                </div>
+                <div class="text">
+                  <p>Animaux autorisés</p>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
         <div class="info">
         <i class="fas fa-info icone"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
@@ -75,7 +91,7 @@
                     </a>
                     <div class="card-text">
                         <h3>Auberge la Cannebière</h3>
-                        <p> Nuit à partir de 25  <strong>€</strong></p>
+                        <p> Nuit à partir de<strong> 25€</strong></p>
                             <div class="fas fa-star Icon-star"></div>
                             <div class="fas fa-star Icon-star"></div>
                             <div class="fas fa-star Icon-star"></div>
@@ -130,7 +146,7 @@
                     </a>
                     <div class="card-text">
                         <h3>Auberge Le Panier</h3>
-                        <p> Nuit à partir de 23<strong>€</strong></p>
+                        <p> Nuit à partir de <strong>23€</strong></p>
                             <div class="fas fa-star Icon-star"></div>
                             <div class="fas fa-star Icon-star"></div>
                             <div class="fas fa-star Icon-star"></div>
